--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>List of books</title>
+<link href="node_modules\bootstrap\dist\css\bootstrap.min.css" rel="stylesheet" media="screen">
 </head>
 <body>
 <table>
