--- a/index.html
+++ b/index.html
@@ -1,30 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>List of books</title>
-    <!-- <link href="node_modules\bootstrap\dist\css\bootstrap.min.css" rel="stylesheet" media="screen">
-    <script src="node_modules\jquery\dist/jquery.min.js"></script>
-    <script src="node_modules\bootstrap\dist\jsbootstrap.min.js"></script> -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <style>
-/*table {
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-}
+  <title>List of books</title>
+  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+  <script src="node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="node_modules/popper.js/dist/popper.min.js"></script>
+  <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
-td, th {
-    border: 1px solid #dddddd;
-    text-align: left;
-    padding: 8px;
-}
-
-tr:nth-child(even) {
-    background-color: #dddddd;
-}*/
-</style>
 </head>
 <body>
 <h1>List of books</h1>
