--- a/index.html
+++ b/index.html
@@ -6,12 +6,9 @@
   <script src="node_modules/jquery/dist/jquery.min.js"></script>
   <script src="node_modules/popper.js/dist/popper.min.js"></script>
   <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
 </head>
 <body>
 <h1>List of books</h1>
-       
-
 <div class="container-fluid">
   <div class="row bg-dark text-white">
     <div class="col-lg-1"><button type="button" class="btn btn-secondary" onclick="sortByID()">#ID</button></div>
@@ -20,28 +17,23 @@
       <div class="col-lg-1"><button type="button" class="btn btn-secondary" onclick="sortByPrice()">Price </button> </div>
       <div class="col-lg-2">Details</div>
     </div>
-  <div id="listAll"></div>
+  <div id="list-all"></div>
 </div>
-
-
 <button onclick="sortByPriceRev()">Sort by price (reverse)</button>
-
-<!-- <div class="col-lg-2"><button type="button" class="btn btn-outline-light text-dark" data-toggle="modal" data-target="#detailsModal05">View details</button></div> -->
 <!-- Modal -->
-    <div class="modal fade" id="detailsModal" role="dialog">
+    <div class="modal fade" id="modal-details" role="dialog">
       <div class="modal-dialog">
-
 <!-- Modal content -->
         <div class="modal-content">
           <div class="modal-header">
-            <h4 id="modalTitle" class="modal-title">empty</h4>
+            <h4 id="modal-title" class="modal-title">empty</h4>
             <button type="button" class="close" data-dismiss="modal">&times;</button>
           </div>
           <div class="modal-body"> 
 
             <div class="container-fluid">
             <div class="row">
-              <div class="col-3"><img id="imgSource" src="images/penumbra.jpg" alt="error load" width="100" height="150">
+              <div class="col-3"><img id="book-img" src="images/penumbra.jpg" alt="error load" width="100" height="150">
               </div>
               <div class="col-9" id="description">
                   <p>empty</p>
@@ -55,10 +47,6 @@
         </div> 
       </div>
     </div>  <!-- End of modal -->    
-
-
-
 <script type="text/javascript" src="src/buildList.js"></script>
-
 </body>
 </html>
