use googlebooks API via AJAX

--- a/index.html
+++ b/index.html
@@ -46,7 +46,14 @@
           </div>
         </div> 
       </div>
-    </div>  <!-- End of modal -->    
+    </div>  <!-- End of modal -->   
+
+<p>The XMLHttpRequest Object</p>
+<input type="search" name="searchString" id="books">
+<button type="button" onclick="loadDoc()">Search</button>
+<div id="result">
+  Results
+</div> 
 <script type="text/javascript" src="src/buildList.js"></script>
 </body>
 </html>
