--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <h1>List of books</h1>
-<input type="search" name="searchString" id="books">
+<input type="search" name="searchString" id="books" value="test">
 <button type="button" onclick="loadDoc()">Search</button>
 <div class="container-fluid">
   <div class="row bg-dark text-white">
