use callback function

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <h1>List of books</h1>
-<input type="search" name="searchString" id="books" value="test">
-<button type="button" onclick="loadDoc()">Search</button>
+<input type="search" name="searchString" id="searchBooks" value="test">
+<button type="button" onclick="loadDocCallBack(getResponse)">Search</button>
 <div class="container-fluid">
   <div class="row bg-dark text-white">
     <div class="col-lg-1"><button type="button" class="btn btn-secondary" onclick="sortByID()">Date</button></div>
