--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
             <div class="container-fluid">
             <div class="row">
-              <div class="col-3"><img id="book-img" src="images/penumbra.jpg" alt="error load" width="100" height="150">
+              <div class="col-3" id="book-publisher">
               </div>
               <div class="col-9" id="description">
                   <p>empty</p>
